# pyvisgen

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  environment-dev.yml  environment.yml  pyproject.toml  setup.py  towncrier.toml
.github/workflows/: changelog.yml  ci.yml  pypi-publish.yml
config/: astar.toml  data_set.toml  default.toml  default_data_set.toml  test.toml  vlba.toml
docs/: citeus.md  conf.py  glossary.md  index.rst  references.bib  references.md
docs/_static/: pyvisgen.css  switcher.json
docs/_static/css/: pyvisgen.css
docs/api-reference/dataset/: dataset.rst  index.rst  utils.rst
docs/api-reference/fits/: data.rst  index.rst  writer.rst
docs/api-reference/gridding/: index.rst
docs/api-reference/io/: config.rst  dataconverter.rst  datawriters.rst  index.rst
docs/api-reference/layouts/: index.rst
docs/api-reference/simulation/: array.rst  data_set.rst  index.rst  observation.rst  scan.rst  visibility.rst
docs/api-reference/utils/: config.rst  data.rst  index.rst  logging.rst
docs/changes/: 101.feature.rst  102.maintenance.rst  103.bugfix.rst  105.feature.rst  107.maintenance.rst  108.feature.rst  110.bugfix.rst  117.feature.rst  117.maintenance.rst  118.feature.rst  119.feature.rst  122.feature.rst  123.feature.rst  127.feature.rst  129.maintenance.rst  130.maintenance.rst  132.bugfix.rst  132.feature.rst  134.maintenance.rst  136.maintenance.rst  143.bugfix.rst  145.feature.rst  146.bugfix.rst  146.feature.rst  146.maintenance.rst  147.api.rst  147.feature.rst  150.bugfix.rst  150.feature.rst  150.optimization.rst  152.bugfix.rst  153.feature.rst  154.feature.rst  158.feature.rst  159.feature.rst  24.feature.rst  25.bugfix.rst  27.maintenance.rst  28.bugfix.rst  28.feature.rst  (+45 more)
docs/developer-guide/: contributions.md  getting-started.md  getting-started.rst  index.md  maintainer-guide.md  style-guide.md
docs/user-guide/: about.rst  examples_tutorials.rst  getting-started.md  getting-started.rst  index.rst
docs/user-guide/examples_tutorials/: ideal_interferometer.md  ideal_interferometer.rst  index.md  index.rst
examples/: 01_layouts.ipynb  01_rime_formalism.ipynb  02_times.ipynb  0X_simulation_chain.ipynb  Untitled.ipynb  baselines.ipynb  celestial-03-05.fits  fits.ipynb  fits_tests.ipynb  ideal_interferometer.ipynb  old_01_layouts.ipynb  old_02_times.ipynb  simulation_chain.ipynb  test0.fits  test_model.h5  utils.py  visibility.ipynb
pyvisgen/: version.py
pyvisgen/fits/: __init__.py  data.py  writer.py
pyvisgen/gridding/: __init__.py  alt_gridder.py  gridder.py  utils.py
pyvisgen/gridding/scripts/: grid_data.py
pyvisgen/layouts/: alma.txt  alma_dsharp.txt  layouts.py  meerkat.txt  meerkat_test.txt  test_layout.txt  vla.txt
pyvisgen/simulation/: __init__.py  array.py  data_set.py  observation.py  sampling_masks.py  scan.py  utils.py  visibility.py
pyvisgen/simulation/scripts/: create_dataset.py
pyvisgen/tools/: quickstart.py
pyvisgen/utils/: config.py  data.py  sky_distributions.py
resources/layouts/: dsa2000W.txt  dsa2000_31b.txt  eht.txt  lofar_lotss.txt  meerkat.txt  vla.txt  vlba.txt  vlba_light.txt
resources/noise_configs/: meerkat.toml  vlba.toml
scripts/: cluster.py
src/pyvisgen/: __init__.py  _plugin_manager.py  exceptions.py  plugin_manager.py  version.py
src/pyvisgen/calibration/: __init__.py  phase.py  utils.py
src/pyvisgen/dataset/: __init__.py  _webdataset.py  data_set.py  dataset.py  utils.py
src/pyvisgen/fits/: __init__.py  data.py  writer.py
src/pyvisgen/gridding/: __init__.py  default_gridder.py  gridder.py  utils.py
src/pyvisgen/io/: __init__.py  config.py  dataconverter.py  datawriters.py
src/pyvisgen/layouts/: __init__.py  disp.py  layouts.py
src/pyvisgen/simulation/: __init__.py  array.py  data_set.py  noise.py  observation.py  scan.py  utils.py  visibility.py
src/pyvisgen/simulation/scripts/: create_dataset.py
src/pyvisgen/tools/: cli.py  converter.py  create_dataset.py  quickstart.py
src/pyvisgen/utils/: __init__.py  batch_size.py  codecarbon.py  config.py  data.py  logging.py
tests/: conftest.py  test.py  test_conf.toml  test_config.py  test_exceptions.py  test_layouts.py  test_plugin_manager.py  test_scan.py  test_simulation.py  test_simulations.py  test_utils.py  test_writers.py
tests/data/: source_bundle_train0.h5  source_bundle_train1.h5  source_bundle_train2.h5  source_bundle_train3.h5  source_bundle_train4.h5  test_inputs.h5  test_layout.txt
tests/dataset/: conftest.py  test_dataset.py  test_dataset_utils.py
tests/fits/: test_fits_writer.py
tests/io/: conftest.py  test_config.py  test_dataconverter.py  test_datawriters.py
tests/layouts/: conftest.py  test_disp.py  test_layouts.py
tests/simulation/: conftest.py  test_array.py  test_noise.py  test_observation.py  test_scan.py  test_simulation_utils.py  test_visibility.py
tests/simulations/: test_scan.py
tests/tools/: conftest.py  test_cli.py  test_converter_cli.py  test_create_dataset_cli.py
tests/utils/: test_batch_size.py  test_carbon_tracking.py  test_data.py
vipy/fits/: writer.py
vipy/layouts/: layouts.py
vipy/simulation/: scan.py  utils.py  uv_plots.py
vipy/simulation/.github/workflows/: ci.yml
vipy/simulation/layouts/: layouts.py
vipy/visualization/: layout_projections.py
