[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvisgen"
dynamic = ["version"]
description = "Simulate radio interferometer observations and visibility generation with the RIME formalism."
readme = "README.md"
authors = [
  { name = "Kevin Schmitz, Felix Geyer, Stefan Fröse, Anno Knierim, Tom Groß" },
]
maintainers = [
  { name = "Kevin Schmitz", email = "kevin2.schmitz@tu-dortmund.de" },
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.10"

dependencies = [
  "astropy<=6.1.0",
  "click",
  "h5py",
  "ipython",
  "joblib",
  "jupyter",
  "matplotlib",
  "natsort",
  "numpy",
  "pandas",
  "rich",
  "scipy",
  "toma",
  "toml",
  "torch",
  "tqdm",
]

[project.optional-dependencies]

tests = [
  "coverage!=6.3.0",
  "h5py",
  "pytest >= 7.0",
  "pytest-cov",
  "pytest-xdist",
  "restructuredtext-lint",
  "tomli",
]

dev = [
  "pre-commit",
]

docs = [
  "graphviz",
  "ipython",
  "jupyter",
  "nbsphinx",
  "notebook",
  "numpydoc",
  "pydata_sphinx_theme",
  "pyvisgen[all]",
  "sphinx",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery >= 0.16.0",
  "sphinx_automodapi",
  "sphinxcontrib-bibtex",
  "tomli; python_version < '3.11'",
]

[project.scripts]
pyvisgen-simulate = "pyvisgen.simulation.scripts.create_dataset:main"

[tool.setuptools_scm]
write_to = "pyvisgen/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
omit = [
  "pyvisgen/version.py",
  "pyvisgen/_version.py",
  "docs/*",
  "pyvisgen/gridding/alt_gridder.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.towncrier]
package = "pyvisgen"
directory = "docs/changes"
filename = "CHANGES.rst"
template = "docs/changes/template.rst"
# let towncrier create proper links to the merged PR
issue_format = "`#{issue} <https://github.com/radionets-project/pyvisgen/pull/{issue}>`__"

[tool.towncrier.fragment.feature]
name = "New Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"
showcontent = true

[tool.towncrier.fragment.api]
name = "API Changes"
showcontent = true

[tool.towncrier.fragment.datamodel]
name = "Data Model Changes"
showcontent = true

[tool.towncrier.fragment.optimization]
name = "Refactoring and Optimization"
showcontent = true

[tool.towncrier.fragment.maintenance]
name = "Maintenance"
showcontent = true

[[tool.towncrier.section]]
name = ""
path = ""


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
extend-select = [
  "I",  # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["pyvisgen"]
